--- a/assets/scss/pages.giving.scss
+++ b/assets/scss/pages.giving.scss
@@ -7,7 +7,18 @@
     padding: 10px;
   }
   &__entries {
-    div {
+    div.col {
+      border-bottom: 1px solid $lightGray;
+      border-left: 1px solid $lightGray;
+      padding: 10px;
+
+      &:last-of-type {
+        border-right: 1px solid $lightGray;
+      }
+    }
+  }
+  &__action {
+    div.col {
       border-bottom: 1px solid $lightGray;
       border-left: 1px solid $lightGray;
       padding: 10px;
