--- a/renderer/assets/scss/_main.scss
+++ b/renderer/assets/scss/_main.scss
@@ -10,6 +10,7 @@
 
 @import "objects.animations";
 
+@import "pages.account";
 @import "pages.members";
 @import "pages.giving";
 @import "pages.calendar";
