--- a/renderer/assets/scss/objects.animations.scss
+++ b/renderer/assets/scss/objects.animations.scss
@@ -2,7 +2,7 @@
 
 .heart-loader-wrapper {
   align-items: center;
-  background: $background;
+  background: $offWhite;
   display: flex;
   flex-flow: column;
   justify-content: center;
