--- a/renderer/assets/scss/settings.variables.scss
+++ b/renderer/assets/scss/settings.variables.scss
@@ -1,6 +1,6 @@
 $menuHeight: 54px;
 $background: #FFFFFF;
-$heartLoader: #9EB5FF;
+$heartLoader: #198754;
 $offWhite: #F0F0F0;
 $red: #f44336;
 $darkGray: #222;
