--- a/renderer/assets/scss/settings.global.scss
+++ b/renderer/assets/scss/settings.global.scss
@@ -65,7 +65,7 @@ html {
   padding-bottom: convertPxToRem(15);
 
   &__menu {
-    padding: 15px 0 15px 15px;
+    padding: 15px 0 0 15px;
 
     ul {
       padding-left: 0;
